--- a/avance1.bib
+++ b/avance1.bib
@@ -124,3 +124,47 @@ title = {{Efficient construction of large test collections}},
 url = {http://portal.acm.org/citation.cfm?doid=290941.291009},
 year = {1998}
 }
+@book{Segaran2007,
+address = {Sebastopol, Ca; EEUU},
+author = {Segaran, T.},
+edition = {1},
+editor = {{Treseler O'Brien}, Mary},
+file = {:media/Datos/Lebrixen/Fase\_I/Bibliografia/Miscelanea/OReilly.Programming.Collective.Intelligence.Aug.2007.9780596529321.pdf:pdf},
+isbn = {0-596-52932-5},
+publisher = {O'Reilly},
+title = {{Programming collective intelligence}},
+url = {http://portal.acm.org/citation.cfm?id=1406354},
+year = {2007}
+}
+@article{Mortensen2007,
+author = {Mortensen, M.},
+file = {:media/Datos/Lebrixen/Fase\_I/Bibliografia/Miscelanea/thesis.pdf:pdf},
+journal = {Science},
+keywords = {Investigaci\'{o}nRelacionada},
+mendeley-tags = {Investigaci\'{o}nRelacionada},
+publisher = {Citeseer},
+title = {{Design and evaluation of a recommender system}},
+url = {http://citeseerx.ist.psu.edu/viewdoc/download?doi=10.1.1.103.2726\&amp;rep=rep1\&amp;type=pdf},
+year = {2007}
+}
+@article{Hayes,
+author = {Hayes, C. and Massa, P. and Avesani, P. and Cunningham, P.},
+file = {:media/Datos/Lebrixen/Fase\_I/Bibliografia/Miscelanea/TCD-CS-2002-19.pdf:pdf},
+journal = {Recommendation and Personalization in eCommerce},
+keywords = {RecommenderSystems},
+mendeley-tags = {RecommenderSystems},
+pages = {50},
+publisher = {Citeseer},
+title = {{An on-line evaluation framework for recommender systems}},
+url = {http://citeseerx.ist.psu.edu/viewdoc/download?doi=10.1.1.115.6861\&amp;rep=rep1\&amp;type=pdf\#page=56}
+}
+@misc{Schein,
+abstract = {Evaluation of a recommender system algorithm is a challenging task due to the many possible scenarios in which such systems may be deployed. We have designed a new performance plot called the CROC curve with an associated statistic: the area under the curve. Our CROC curve supplements the widely used ROC curve in recommender system evaluation by discovering performance characteristics that standard ROC evaluation often ignores. Empirical studies on two domains and including several recommender system algorithms demonstrate that combining ROC and CROC curves in evaluation can lead to a more informed characterization of performance than using either curve alone.},
+author = {Schein, Andrew I. and Popescul, Alexandrin and Ungar, Lyle H. and Pennock, David M.},
+doi = {10.1.1.59.8796},
+file = {:home/lfborjas/.local/share/data/Mendeley Ltd./Mendeley Desktop/Downloaded/Schein et al. - Unknown - CROC A New Evaluation Criterion for Recommender Systems.pdf:pdf},
+keywords = {RecommenderSystems},
+mendeley-tags = {RecommenderSystems},
+title = {{CROC: A New Evaluation Criterion for Recommender Systems}},
+url = {http://citeseerx.ist.psu.edu/viewdoc/summary?doi=10.1.1.59.8796}
+}
