agregado el libro de collective intelligence y unos papers de sistemas recomendadores

--- a/avance1.bib
+++ b/avance1.bib
@@ -168,3 +168,53 @@ mendeley-tags = {RecommenderSystems},
 title = {{CROC: A New Evaluation Criterion for Recommender Systems}},
 url = {http://citeseerx.ist.psu.edu/viewdoc/summary?doi=10.1.1.59.8796}
 }
+@inproceedings{Basu1998,
+abstract = {Recommendation systems make suggestions about artifacts to a user. For instance, they may predict whether a user would be interested in seeing a particular movie. Social recomendation methods collect ratings of artifacts from many individuals and use nearest-neighbor techniques to make recommendations to a user concerning new artifacts. However, these methods do not use the significant amount of other information that is often available about the nature of each artifact --- such as cast lists or movie reviews, for example. This paper presents an inductive learning approach to recommendation that is able to use both ratings information and other forms of information about each artifact in predicting user preferences. We show that our method outperforms an existing social-filtering method in the domain of movie recommendations on a dataset of more than 45,000 movie ratings collected from a community of over 250 users.  Introduction  Recommendations are a part of everyday life. We usually...},
+annote = {Se relaciona con el otro de NLP: adem\'{a}s de las preferencias de otros usuarios, toma en cuenta caracter\'{\i}sticas internas del artefacto. Habla de recomm de pel\'{\i}culas},
+author = {Basu, Chumki and Hirsh, Haym and Cohen, William},
+booktitle = {In Proceedings of the Fifteenth National Conference on Artificial Intelligence},
+doi = {10.1.1.36.4620},
+file = {:home/lfborjas/.local/share/data/Mendeley Ltd./Mendeley Desktop/Downloaded/Basu, Hirsh, Cohen - 1998 - Recommendation as Classification Using Social and Content-Based Information in Recommendation.pdf:pdf},
+keywords = {RecommenderSystems},
+mendeley-tags = {RecommenderSystems},
+pages = {714--720},
+publisher = {AAAI Press},
+title = {{Recommendation as Classification: Using Social and Content-Based Information in Recommendation}},
+url = {http://citeseerx.ist.psu.edu/viewdoc/summary?doi=10.1.1.36.4620},
+year = {1998}
+}
+@inproceedings{Mooney1999,
+abstract = {Recommender systems improve access to relevant products and information by making personalized suggestions based on previous examples of a user's likes and dislikes. Most existing recommender systems use collaborative filtering methods that base recommendations on other users' preferences. By contrast, content-based methods use information about an item itself to make suggestions. This approach has the advantage of being able to recommend previously unrated items to users with unique interests and to provide explanations for its recommendations. We describe a content-based book recommending system that utilizes information extraction and a machine-learning algorithm for text categorization. Initial experimental results demonstrate that this approach can produce accurate recommendations.},
+author = {Mooney, Raymond J. and Roy, Loriene},
+booktitle = {IN PROCEEDINGS OF THE FIFTH ACM CONFERENCE ON DIGITAL LIBRARIES},
+doi = {10.1.1.16.4348},
+file = {:home/lfborjas/.local/share/data/Mendeley Ltd./Mendeley Desktop/Downloaded/Mooney, Roy - 1999 - Content-Based Book Recommending Using Learning for Text Categorization.pdf:pdf},
+keywords = {RecommenderSystems},
+mendeley-tags = {RecommenderSystems},
+pages = {195--204},
+publisher = {ACM Press},
+title = {{Content-Based Book Recommending Using Learning for Text Categorization}},
+url = {http://citeseerx.ist.psu.edu/viewdoc/summary?doi=10.1.1.16.4348},
+year = {1999}
+}
+@article{Chen2008,
+author = {Chen, Deng-neng and Wu, Cheng-hsun},
+file = {:media/Datos/Lebrixen/Fase\_I/Bibliografia/Miscelanea/AN ONTOLOGY BASED DOCUMENT RECOMMENDATION SYSTEM DESIGN IMPLEME.pdf:pdf},
+journal = {Information Systems},
+keywords = {FormalConceptAnalysis,Investigaci\'{o}nRelacionada,RecommenderSystems},
+mendeley-tags = {FormalConceptAnalysis,Investigaci\'{o}nRelacionada,RecommenderSystems},
+title = {{An ontology-based document recommendation system: design, implementation, and evaluation}},
+year = {2008}
+}
+@book{Segaran2007,
+address = {Sebastopol, Ca; EEUU},
+author = {Segaran, T.},
+edition = {1},
+editor = {{Treselet O'Brien}, Mary},
+file = {:media/Datos/Lebrixen/Fase\_I/Bibliografia/Miscelanea/OReilly.Programming.Collective.Intelligence.Aug.2007.9780596529321.pdf:pdf},
+isbn = {0-596-52932-5},
+publisher = {O'Reilly},
+title = {{Programming collective intelligence}},
+url = {http://portal.acm.org/citation.cfm?id=1406354},
+year = {2007}
+}
