--- a/avance1.bib
+++ b/avance1.bib
@@ -218,3 +218,16 @@ title = {{Programming collective intelligence}},
 url = {http://portal.acm.org/citation.cfm?id=1406354},
 year = {2007}
 }
+@inproceedings{PuertaMelquizo2007,
+annote = {Ac\'{a} habla de las cosas a tener en cuenta en un sistema recomendador: no interferir con el usuario, etc.
+      },
+author = {{Puerta Melquizo}, M.C. and Bogers, T. and L.W.J., Boves; and Desphande, A and Bosch, A. Van Den and Cardoso, J. and Cordeiro, J. and Filipe, J.},
+booktitle = {ICEIS 2007: Proceedings of the Ninth International Conference on Enterprise Information Systems},
+file = {:home/lfborjas/Lebrixen/Fase\_I/Bibliografia/Miscelanea/puertamelguizo.2006.iceis2007.paper.pdf:pdf},
+keywords = {Investigaci\'{o}nRelacionada,RecommenderSystems},
+mendeley-tags = {Investigaci\'{o}nRelacionada,RecommenderSystems},
+pages = {86--91},
+publisher = {Set\'{u}bal, INSTICC},
+title = {{What a proactive recommendation system needs: relevance, non-intrusiveness and a new long-term memory}},
+year = {2007}
+}
